--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -5,6 +5,7 @@
 html {
   font-size: 16px;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -20,4 +21,25 @@ ul, ol {
 li {
   padding: 10px 0px;
   text-decoration: underline;
+}
+
+.img-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.img-item {
+  min-width: 320px;
+  max-width: 320px;
+  border: 1px solid black;
+  margin: 10px;
+}
+
+.img-item img {
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
